# pytorch

./: -  -files  .Doxyfile  .Doxyfile-c  .Doxyfile-python  .THCTensor.cu.swp  .bazelignore  .bazelrc  .bazelversion  .bc-linter.yml  .buckconfig  .buckconfig.1.oss  .buckconfig.2.oss  .buckconfig.local  .buckconfig.oss  .clang-format  .clang-tidy  .clang-tidy-oss  .cmakelintrc  .coveragerc  .cursorrules  .dockerignore  .editorconfig  .env.sh  .flake8  .gdbinit  .ghstackrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitmodules.aten  .gitpod.yml  .hgsparse-caffe2-dev  .hgsparse-caffe2-xplat  .isort.cfg  .jenkins  .jfconfig  .linkcheckerrc  .lintrunner.private.toml  (+1220 more)
.ci/lumen_cli/: README.md  pyproject.toml
android/pytorch_android/: CMakeLists.txt  build.gradle  generate_test_asset.cpp  generate_test_torchscripts.py  (+2 more)
aten/: .flake8  .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CMakeLists.txt  README.md  re_worker_requirements
binaries/: CMakeLists.txt  aot_model_compiler.cc  at_launch_benchmark.cc  autotuner.cc  benchmark_args.h  benchmark_helper.cc  benchmark_helper.h  caffe2_benchmark.cc  compare_models_torch.cc  convert_and_benchmark.cc  convert_caffe_image_db.cc  convert_db.cc  convert_encoded_to_raw_leveldb.cc  convert_image_to_tensor.cc  core_overhead_benchmark.cc  core_overhead_benchmark_gpu.cc  db_throughput.cc  dump_operator_names.cc  inspect_gpu.cc  intra_inter_benchmark.cc  lite_interpreter_model_load.cc  load_benchmark_torch.cc  make_cifar_db.cc  make_image_db.cc  make_mnist_db.cc  optimize_for_mobile.cc  parallel_info.cc  predictor_verifier.cc  print_core_object_sizes_gpu.cc  print_registered_core_operators.cc  record_function_benchmark.cc  run_plan.cc  run_plan_mpi.cc  speed_benchmark.cc  speed_benchmark_torch.cc  split_db.cc  tsv_2_proto.cc  tutorial_blob.cc  vulkan_torch.cc  zmq_feeder.cc
c10/: API.h  BUCK  BUCK.oss  BUILD.bazel  BUILD.buck  CLAUDE.md  CMakeLists.txt  Config.h.in  Device.cpp  Device.h  DeviceGuard.h  DeviceType.cpp  DeviceType.h  Error.cpp  Error.h  Half-inl.h  Half.cpp  Half.h  Optional.h  QInt.h  Registry.h  Stream.cpp  Stream.h  StreamGuard.h  build.bzl  c10_defs.bzl  c10_dummy.cpp  c10_dummy.h  defs_hip.bzl  dummy.cpp  dummy_test.cpp  oss_definitions.bzl  ovrsource_defs.bzl
caffe2/: .clang-format  BREW  BUILD_MODE.bzl  CMakeLists.txt  README.md  VERSION_NUMBER  __init__.py  c2_aten_srcs.bzl  defs.bzl  defs_hip.bzl  release-notes.md  requirements.txt  unexported_symbols.lds  version_script.lds
functorch/: .flake8  .gitignore  .lintrunner.toml  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPILE_README.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  custom_vjp.py  eager_fusion.py  notebooks  pull_request_template.md  setup.cfg  setup.py  test.py  version.txt  vmapvjpvjp_failures.txt  vmapvjpvjp_failures_fixed.txt  writing_batching_rules.md
gloo/: CMakeLists.txt  algorithm.cc  algorithm.h  allgather_ring.h  allreduce.h  allreduce_halving_doubling.h  allreduce_ring.h  allreduce_ring_chunked.h  barrier.h  barrier_all_to_all.h  barrier_all_to_one.h  broadcast.h  broadcast_one_to_all.h  common.h  config.h  config.h.in  context.cc  context.h  cuda.cu  cuda.h  cuda_allreduce_halving_doubling.cc  cuda_allreduce_halving_doubling.h  cuda_allreduce_ring.cc  cuda_allreduce_ring.h  cuda_allreduce_ring_chunked.cc  cuda_allreduce_ring_chunked.h  cuda_broadcast_one_to_all.cc  cuda_broadcast_one_to_all.h  cuda_collectives.h  cuda_collectives_device.h  cuda_gpudirect_allreduce_ring.cc  cuda_gpudirect_allreduce_ring.h  cuda_nccl.cu  cuda_nccl.h  cuda_private.cu  cuda_private.h  cuda_workspace.h  math.cc  math.h  types.h
jay_my_class/: CMakeLists.txt  class.cpp  onnx_class.cpp
jay_my_ops/: CMakeLists.txt  onnx_ops.cpp
memory_allocator/: CMakeLists.txt  main_static_resnet.cpp  profile_mine.py  run_jemalloc_tests.sh
model2/: CMakeLists.txt  archive_format  byteorder  main.cpp  model.exp  model_triton_tem_fused_addmm_relu_sigmoid_t_1.cubin  model_triton_tem_fused_addmm_relu_t_0.cubin
modules/: CMakeLists.txt
nezha/: CMakeLists.txt  core_func.cpp  core_func.h  core_op.cpp  local_demo.py  module_def.py  separate_models.py  setup.py
nnc/: CMakeLists.txt
test/: .test_torch.py@neomake_77642_6.py  .test_torch.py@neomake_96050_104.py  .test_torch.py@neomake_96050_13.py  .test_torch.py@neomake_96050_15.py  .test_torch.py@neomake_96050_2.py  .test_torch.py@neomake_96050_23.py  .test_torch.py@neomake_96050_25.py  .test_torch.py@neomake_96050_30.py  .test_torch.py@neomake_96050_36.py  .test_torch.py@neomake_96050_4.py  .test_torch.py@neomake_96050_40.py  .test_torch.py@neomake_96050_49.py  .test_torch.py@neomake_96050_63.py  .test_torch.py@neomake_96050_66.py  .test_torch.py@neomake_96050_75.py  .test_torch.py@neomake_96050_80.py  .test_torch.py@neomake_96050_84.py  .test_torch.py@neomake_96050_87.py  .test_torch.py@neomake_96050_90.py  BUCK_TREE  CLAUDE.md  CMakeLists.txt  HowToWriteTestsUsingFileCheck.md  _test_bazel.py  allowlist_for_publicAPI.json  amp_lists.py  atest.cpp  attn.py  autograd_derivations.md  autograd_lab.py  base_to_view.py  basic.cpp  bazel_cuda_stuck_repro.cpp  bench_graph_overhead.py  bench_mps_ops.py  bla.py  broadcast_test.cpp  bugfix.py  categorize_failures.py  common.py  (+603 more)
torch/: .nfs00b400000073cac2000005fb  .nfs00d00000006de84a000005fc  CLAUDE.md  CMakeLists.txt  README.txt  Storage.py  Tensor.py  TensorPrinting.py  _VF.py  __config__.py  __future__.py  __init__.py  __init__.py.in  __init__.pyi  __init__.pyi.in  _appdirs.py  _autograd_functions.py  _autograd_internal.py  _classes.py  _compile.py  _compiled_autograd.py  _config_utils.py  _constraint.py  _cpp_pyimports.py  _cuda_sanitizer.py  _custom_function.py  _custom_op.py  _custom_ops.py  _decomp_tables.py  _deploy.py  _dynamo_utils.py  _environment.py  _fullgraph.py  _generator.py  _guards.py  _inductor_env_vars.py  _isl.py  _jit_internal.py  _linalg_utils.py  _lobpcg.py  (+102 more)
torchpy/: .gitignore  CMakeLists.txt  README.md  app_main.cpp  loader.py  module.py  test_init.cpp  test_main.cpp  test_pybind.cpp  threads_main.cpp  torchpy.cpp  torchpy.h
(+48681 files in other folders)
